Bug reveal for theming from dark mode to light mode due to system theme. System theme must be set to light mode in OS settings (win10) - Adjusted post heading colour and changed icon of light mode for all pages.

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -68,7 +68,7 @@ small {
 }
 
 a {
-  color: #39adc4;
+  color: #226597;
   box-shadow: none;
 }
 
